--- a/Jt76.Ui/ClientApp/src/app/modules/weather/weather-panel/weather-panel.component.scss
+++ b/Jt76.Ui/ClientApp/src/app/modules/weather/weather-panel/weather-panel.component.scss
@@ -31,6 +31,15 @@
   height: 225px
 }
 
+.weather-description {
+  font-weight: bold;
+}
+
 .weather-skycon {
   margin:-10px;
 }
+
+.weather-temperature-mini {
+  font-weight: bold;
+}
+
