--- a/Jt76.Ui/ClientApp/src/styles.scss
+++ b/Jt76.Ui/ClientApp/src/styles.scss
@@ -60,6 +60,10 @@
   padding-right: 5px;
 }
 
+.line-wrap {
+  white-space: pre-line;
+}
+
 .list-item {
   border: 1px solid black;
 }
@@ -95,4 +99,9 @@
 /* Html element overrides*/
 body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+hr {
+  height: 1px;
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
