corrected time formats for weather panel

--- a/Jt76.Ui/ClientApp/src/app/modules/weather/weather-panel/weather-panel.component.html
+++ b/Jt76.Ui/ClientApp/src/app/modules/weather/weather-panel/weather-panel.component.html
@@ -55,7 +55,7 @@
           <mat-expansion-panel-header>
             <mat-panel-title>
               <span class="weather-time">
-                {{item.startDateTime | date:"mediumDate":"UTC-12"}} {{item.startDateTime | date:"h:mm a":"UTC-12"}}
+                {{item.startDateTime | date:"mediumDate"}} {{item.startDateTime | date:"h:mm a"}}
               </span>
             </mat-panel-title>
             <mat-panel-description>
