--- a/Jt76.Ui/ClientApp/src/themes/default-theme.scss
+++ b/Jt76.Ui/ClientApp/src/themes/default-theme.scss
@@ -3,3 +3,28 @@ $app-accent: mat-palette($mat-blue-grey, 400);
 $app-warn: mat-palette($mat-blue-grey, 800);
 
 $app-theme: mat-light-theme($app-primary, $app-accent, $app-warn);
+
+@include mat-core-theme($app-theme);
+@include mat-autocomplete-theme($app-theme);
+@include mat-button-theme($app-theme);
+@include mat-button-toggle-theme($app-theme);
+@include mat-card-theme($app-theme);
+@include mat-checkbox-theme($app-theme);
+@include mat-chips-theme($app-theme);
+@include mat-dialog-theme($app-theme);
+@include mat-grid-list-theme($app-theme);
+@include mat-icon-theme($app-theme);
+@include mat-input-theme($app-theme);
+@include mat-list-theme($app-theme);
+@include mat-menu-theme($app-theme);
+@include mat-progress-bar-theme($app-theme);
+@include mat-progress-spinner-theme($app-theme);
+@include mat-radio-theme($app-theme);
+@include mat-select-theme($app-theme);
+@include mat-sidenav-theme($app-theme);
+@include mat-slide-toggle-theme($app-theme);
+@include mat-slider-theme($app-theme);
+@include mat-tabs-theme($app-theme);
+@include mat-toolbar-theme($app-theme);
+@include mat-tooltip-theme($app-theme);
+@include mat-datepicker-theme($app-theme); 
