--- a/Jt76.Ui/ClientApp/src/themes/light-theme.scss
+++ b/Jt76.Ui/ClientApp/src/themes/light-theme.scss
@@ -3,3 +3,28 @@ $app-light-accent: mat-palette($mat-grey, 400);
 $app-light-warn: mat-palette($mat-grey, 400);
 
 $app-light-theme: mat-light-theme( $app-light-primary, $app-light-accent, $app-light-warn );
+
+@include mat-core-theme($app-light-theme);
+@include mat-autocomplete-theme($app-light-theme);
+@include mat-button-theme($app-light-theme);
+@include mat-button-toggle-theme($app-light-theme);
+@include mat-card-theme($app-light-theme);
+@include mat-checkbox-theme($app-light-theme);
+@include mat-chips-theme($app-light-theme);
+@include mat-dialog-theme($app-light-theme);
+@include mat-grid-list-theme($app-light-theme);
+@include mat-icon-theme($app-light-theme);
+@include mat-input-theme($app-light-theme);
+@include mat-list-theme($app-light-theme);
+@include mat-menu-theme($app-light-theme);
+@include mat-progress-bar-theme($app-light-theme);
+@include mat-progress-spinner-theme($app-light-theme);
+@include mat-radio-theme($app-light-theme);
+@include mat-select-theme($app-light-theme);
+@include mat-sidenav-theme($app-light-theme);
+@include mat-slide-toggle-theme($app-light-theme);
+@include mat-slider-theme($app-light-theme);
+@include mat-tabs-theme($app-light-theme);
+@include mat-toolbar-theme($app-light-theme);
+@include mat-tooltip-theme($app-light-theme);
+@include mat-datepicker-theme($app-light-theme); 
