--- a/Jt76.Ui/ClientApp/src/app/modules/admin/errors/errors.component.scss
+++ b/Jt76.Ui/ClientApp/src/app/modules/admin/errors/errors.component.scss
@@ -33,5 +33,10 @@
 
 .mat-table {
   overflow: auto;
-  max-height: 500px;
+  max-height: 527px;
+}
+
+//mat-override
+.mat-header-row {
+  min-height: 36px !important;
 }
