Finalized error full data set load sorts/pages/filters

--- a/Jt76.Ui/ClientApp/src/app/modules/admin/errors/errors.component.html
+++ b/Jt76.Ui/ClientApp/src/app/modules/admin/errors/errors.component.html
@@ -81,6 +81,7 @@
         <mat-paginator [length]="length"
                        [pageSize]="pageSize"
                        [pageSizeOptions]="pageSizeOptions"
+                       [showFirstLastButtons]="true"
                        (page)="pageEvent = $event">
         </mat-paginator>
       </div>
