just some format/display changes

--- a/Jt76.Ui/ClientApp/src/app/modules/admin/errors/error/error.component.html
+++ b/Jt76.Ui/ClientApp/src/app/modules/admin/errors/error/error.component.html
@@ -13,7 +13,7 @@
 
         <mat-grid-tile colspan="1"
                        rowspan="1">
-          <div class="error-content">
+          <div class="flex-start">
             <label class="label">
               Message:
             </label>
@@ -24,7 +24,7 @@
         </mat-grid-tile>
         <mat-grid-tile colspan="1"
                        rowspan="1">
-          <div class="error-content">
+          <div class="flex-start">
             <label class="label">
               Error Level:
             </label>
@@ -36,7 +36,7 @@
 
         <mat-grid-tile colspan="1"
                        rowspan="1">
-          <div class="error-content">
+          <div class="flex-start">
             <label class="label">
               Source:
             </label>
@@ -47,7 +47,7 @@
         </mat-grid-tile>
         <mat-grid-tile colspan="1"
                        rowspan="1">
-          <div class="error-content">
+          <div class="flex-start">
             <label class="label">
               Additional Information:
             </label>
@@ -60,7 +60,7 @@
 
         <mat-grid-tile colspan="1"
                        rowspan="1">
-          <div class="error-content">
+          <div class="flex-start">
             <label class="label">
               Created By:
             </label>
@@ -71,7 +71,7 @@
         </mat-grid-tile>
         <mat-grid-tile colspan="1"
                        rowspan="1">
-          <div class="error-content">
+          <div class="flex-start">
             <label class="label">
               Created Date:
             </label>
